--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "simplebar-react": "^3.2.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.2.52",
+    "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react-swc": "^3.4.0",
     "eslint": "^8.51.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -54,6 +57,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "prettier": "^3.0.3",
+    "typescript": "^5.3.3",
     "vite": "^4.4.11",
     "vite-plugin-checker": "^0.6.2"
   }
