--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.163",
     "@mui/material": "^5.15.7",
+    "@types/numeral": "^2.0.5",
     "apexcharts": "^3.45.2",
     "date-fns": "^3.3.1",
     "history": "^5.3.0",
