--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.4.0",
+    "@iconify/iconify": "^3.1.1",
     "@iconify/react": "^4.1.1",
+    "@iconify/types": "^2.0.0",
     "@mui/lab": "^5.0.0-alpha.163",
     "@mui/material": "^5.15.7",
     "@types/numeral": "^2.0.5",
